--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=simpleUserCrudApp
 
 server.port=8100
 
-spring.datasource.url=jdbc:mysql://sample-user-database.c9k4u6w68kbu.ap-northeast-1.rds.amazonaws.com:3306/sampleUserCrudDb
+spring.datasource.url=jdbc:mysql://sample-database.c9k4u6w68kbu.ap-northeast-1.rds.amazonaws.com:3306/sampleUserCrudDb
 spring.datasource.username=scalerstudent
 spring.datasource.password=Scalerstudent123
 
