--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,16 @@ spring.application.name=simpleUserCrudApp
 
 server.port=8100
 
+#MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/sampleUserCrudDb?usessl=false&serverTimezone=UTC
-spring.datasource.username=scalerstudent
-spring.datasource.password=Scalerstudent123
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+#Postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://dpg-d1kg7mp5pdvs73aptffg-a.oregon-postgres.render.com:5432/learning_db_uofq
+#spring.datasource.username=springstudent
+#spring.datasource.password=gBlmII21L1D4Z2ytkOW4y8CZq1JEDJaz
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
